# lint_ligo

./: .gitignore  LICENSE  README.md  dune-project  lint_ligo.opam
examples/: cameligo.rules  pascaligo.rules  reasonligo.rules  useless_test.rules
lib/: deprecate.ml  deprecate_custom.ml  depreciate.ml  depreciate.mli  depreciate_custom.ml  depreciate_custom.mli  dune  errors.ml  errors.mli  lexer.mll  lexer_unparsed.mll  lint_parser.mly  main.ml  main.mli  parser.mly  pascaligo_flavor.ml  pascaligo_flavor.mli  pattern.ml  pattern.mli  rules.ml  rules.mli  run_pattern.ml  run_pattern.mli  unparser_cameligo.ml  unparser_cameligo.mli  unused_variable.ml  unused_variable.mli  utils.ml  utils.mli
lib/unparser/: ast.ml  ast.mli  common.ml  common.mli  dune  unparse.ml  unparser_cameligo.ml  unparser_cameligo.mli  unparser_pascaligo.ml  unparser_pascaligo.mli  unparser_reasonligo.ml  unparser_reasonligo.mli
report/: common.tex  development.tex  executive_summary.tex  publications.bib  roadmap_lint_ligo2.tex
test/: dune
